# data-consumer-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Diagrama sem nome.drawio  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.yaml  docker-compose.yml  etl_awesome_api.drawio  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI-CD.yaml  awesome-api-etl.yml  deploy-image.yml  docker-image.yaml  generate_release.yml  pages_deploy.yml  release_generate.yml  run_application.yaml  run_tests.yaml
app/: extract.py  main.py  transform.py
app/config/: __init__.py
app/extract/: ApiToParquetFile.py  __init__.py
app/transform/: transform.py
app/utils/: logs.py
config/: docker-compose.yaml
data/: BTC-USD-1711379085-00000-of-00001.parquet  ETH-USD-1705510385-00000-of-00001.parquet
docs/: index.html
etl/: __init__.py  main.py  run.py  test_entrypoint.py  test_run.py
etl/common/utils/: common.py  logs.py  test_logs.py
etl/config/: beam.py  database.py  datasource.py  dw.py  dw_service.py  logFile.py
etl/controller/: pipeline.py  test_controller_pipeline.py
etl/jobs/ExtractApiData/: ApiToParquetFile.py  __init__.py
etl/jobs/extract/: ApiToParquetFile.py  __init__.py
etl/jobs/load/: ParquetToDataBase.py  __init__.py
etl/jobs/transform/: __init__.py  transform.py
etl/models/extract/: ApiToParquetFile.py  ParamsValidator.py  __init__.py  api_data_extractor.py  params_validator.py  test_api_data_extractor.py  test_fromAPI.py  test_params_validator.py
etl/models/load/: ToParquet.py  parquet_loader.py  test_parquet_loader.py  test_toParquet__.py
etl/models/transform/: ResponseSplit.py  publisher.py  test_publisher.py  test_transform.py
etl/utils/: common.py  constants.py  logs.py
etl/views/: dataset.pkl  index.html  make_dataset.py  tmp.py
notebooks/: data_explorer.ipynb  notebook_scripts.py  requirements.txt
quotes-api/: docker-compose.yaml  requirements.txt
quotes-api/data/: BTC-USD-1705499505-00000-of-00001.parquet
quotes-api/data/raw/: BTC-USD-1705097387-00000-of-00001.parquet  BTC-USD-1705510385-00000-of-00001.parquet  ETH-USD-1705097387-00000-of-00001.parquet  USD-BRL-1705097387-00000-of-00001.parquet  USD-BRL-1705510385-00000-of-00001.parquet
quotes-api/notebooks/: data_explorer.ipynb
quotes-api/src/: main.py
quotes-api/src/etl/: extract.py  transform.py
quotes-api/tests/: testes_etl.py
tests/: snippets.py  test_ApiToParquetFile.py  test_controller_pipeline.py  test_extract.py  test_extract_prepare.py  test_main.py  test_params_validator.py  test_preextract.py  test_random_params.py  test_reponseSplit.py  test_transform.py
views/: index.html  index.md
