[tool.poetry]
name = "ETL-awesome-api"
version = "4.5.0"
description = "Data Ingestion and Data Analysis from public endpoint using pandas"
authors = ["IvanildoBarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "etl" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
tqdm = "^4.66.4"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
api-to-dataframe = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pandasql = "^0.7.3"
ipykernel = "^6.29.4"
nbconvert = "^7.16.4"
coverage = "^7.5.3"
pytest = "^8.2.2"
poetry-dynamic-versioning = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
versioning = "semantic"