[tool.poetry]
name = "data-consumer-api"
version = "4.5.0"
description = "Data Ingestion and Data Analysis from public endpoint using pandas"
authors = ["IvanildoBarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "etl" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"
api-to-dataframe = "^1.3.11"
numpy = "^2.1.1"
poetry-dynamic-versioning = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pandasql = "^0.7.3"
ipykernel = "^6.29.5"
nbconvert = "^7.16.4"
coverage = "^7.6.1"
pytest = "^8.3.3"
poetry-dynamic-versioning = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
versioning = "semantic"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]
